# orizuru

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  run-travis-job.sh  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: bench.rs  producer.rs  worker.rs
src/: consumer.rs  gc.rs  lib.rs  message.rs  producer.rs
tests/: all.rs  consumer.rs  gc.rs  producer.rs  test_utils.rs
