[package]
name = "orizuru"
version = "0.0.1"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "ISC"

include = [
  "README.md",
  "LICENSE",
  "Cargo.toml",
  "src/**/*",
  "examples/**/*"
]

[dependencies]
redis = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14.0"
