[package]
name = "orizuru"
version = "0.0.1"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
edition = "2018"
description = "A reliable, scalable and flexible Redis message queue."
homepage = "https://github.com/rubik/orizuru"
repository = "https://github.com/rubik/orizuru"
keywords = ["message", "job", "queue", "redis"]

readme = "README.md"
license = "ISC"

include = [
  "README.md",
  "LICENSE",
  "Cargo.toml",
  "src/**/*",
  "examples/**/*"
]

[dev-dependencies]
uuid = { version = "0.7.0", features = ["v4"] }

[dependencies]
redis = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14.0"
